--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - run: |
+          echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+          pip install -r requirements.txt 
       - uses: actions/cache@v3
         with:
           key: mkdocs-material-${{ env.cache_id }}
